# -Agent-issue-doctor-

./: README.md
issue-doctor/: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
issue-doctor/examples/: sample_issue.md
issue-doctor/issue_doctor/: __init__.py  cli.py  crawler.py  diagnosis.py  docker_runner.py  fixer.py  github_agent.py  pr_manager.py  reviewer.py  triager.py
issue-doctor/tests/: test_diagnosis.py  test_docker_runner.py  test_github_agent.py  test_triager.py
